QtSupport: Do not prefer Qt4's uic unconditionally

A Linux distribution with Qt4 and Qt5 installed will typically have uic
and uic-qt4 present in the same directory. Our code always preferred
uic-qt4, even for Qt5, leading to potentially invalid code in the
generated ui header file.

Fixes: QTCREATORBUG-17739
Change-Id: Icf509de4e2fbee1d51fd049a8cf5a27d1ac5190b
Reviewed-by: hjk <hjk@qt.io>