src/plugins/qtsupport/baseqtversion.cpp
@@ -1054,7 +1054,9 @@ QString BaseQtVersionPrivate::findHostBinary(HostBinaries binary) const
         if (HostOsInfo::isWindowsHost()) {
             possibleCommands << "uic.exe";
         } else {
-            possibleCommands << "uic-qt4" << "uic4" << "uic";
+            possibleCommands << "uic";
+            if (q->qtVersion().majorVersion == 4)
+                possibleCommands << "uic-qt4" << "uic4";
         }
         break;
     case QScxmlc:
